--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,19 @@
     </div>
   </div>
 
+  <div>
+    <% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+    <% end %>
+
+    <% if user_signed_in? %>
+      Usuario: <%= current_user.email %> - Rol de usuario: <%= current_user.role %>. No eres tu?
+      <%= link_to "Cerrar sesión", destroy_user_session_path, :method => :delete %>
+    <% else %>
+      <%= link_to "Regístrate", new_user_registration_path %> o <%= link_to "Inicia sesión", new_user_session_path %>
+    <% end %>
+  </div>
+
   <div class="container">
     <%= yield %>
   </div>
