--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,8 +1,10 @@
-<h1>Listing groups</h1>
+<h1>Grupos</h1>
 
-<table>
+<p><%= link_to 'Crear nuevo grupo', new_group_path, class: 'btn btn-primary' %></p>
+
+<table class="table">
   <tr>
-    <th>Name</th>
+    <th>Nombre</th>
     <th></th>
     <th></th>
     <th></th>
@@ -10,14 +12,11 @@
 
 <% @groups.each do |group| %>
   <tr>
-    <td><%= group.name %></td>
-    <td><%= link_to 'Show', group %></td>
-    <td><%= link_to 'Edit', edit_group_path(group) %></td>
-    <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to group.name, group_path(group) %></td>
+    <td><%= link_to 'Editar', edit_group_path(group) %></td>
+    <td><%= link_to 'Eliminar', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
-<br />
 
-<%= link_to 'New Group', new_group_path %>
