--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,22 +10,19 @@
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
-        <% if user_signed_in? %>
         <a class="brand">Kudyn</a>
-        <div class="nav-collapse collapse">
-          <ul class="nav">
-            <li class="active"><a href="#">Inicio</a></li>
-          </ul>
-          <ul class="nav">
-            <li class="active"><a href="#">Asistencia</a></li>
-          </ul>
-          <ul class="nav">
-            <li class="active"><a href="#">Calificaciones</a></li>
-          </ul>
-          <ul class="nav">
-            <li class="active"><%= link_to "Cerrar sesión", destroy_user_session_path, :method => :delete %></li>
-          </ul>
-        </div><!--/.nav-collapse -->
+        <% if user_signed_in? %>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li><%= link_to "Inicio", root_path %></li>
+              <% if current_user.principal? %>
+                <li><%= link_to "Grupos", groups_path %></li>
+                <li><%= link_to "Estudiantes", students_path %></li>
+              <% end %>
+              <ul class="nav">
+                <li><%= link_to "Cerrar sesión", destroy_user_session_path, :method => :delete %></li>
+              </ul>
+            </div><!--/.nav-collapse -->
         <% end %>
       </div>
     </div>
@@ -37,7 +34,9 @@
     <% end %>
   </div>
   <div class="container">
-    <%= yield %>
+    <div class="span9">
+      <%= yield %>
+    </div>
   </div>
 </body>
 </html>
