--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing group</h1>
+<h1>Editar grupo</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @group %> |
-<%= link_to 'Back', groups_path %>
+<%= link_to 'Mostrar', @group %> |
+<%= link_to 'Regresar', groups_path %>
