--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Students#edit</h1>
-<p>Find me in app/views/students/edit.html.erb</p>
+<h1>Editar estudiante</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Regresar', students_path %>
