--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
                 <li><%= link_to "Grupos", groups_path %></li>
                 <li><%= link_to "Cursos", courses_path %></li>
                 <li><%= link_to "Estudiantes", students_path %></li>
+              <% elsif current_user.teacher? %>
+                <li><%= link_to "Grupos", groups_path %></li>
+                <li><%= link_to "Cursos", courses_path %></li>
               <% end %>
               <ul class="nav">
                 <li><%= link_to "Cerrar sesión", destroy_user_session_path, :method => :delete %></li>
@@ -29,12 +32,10 @@
     </div>
   </div>
 
-  <div>
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
-    <% end %>
-  </div>
   <div class="container">
+    <% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, :id => "flash_#{name}", class: 'alert alert-block' %>
+    <% end %>
     <div class="span9">
       <%= yield %>
     </div>
