--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,3 +1,6 @@
+<% if params[:asistencia] %>
+  <%= render :partial => 'attendance', :locals => { :groups => @groups }   %>
+<% else %>
 <h1>Grupos</h1>
 
 <p><%= link_to 'Crear nuevo grupo', new_group_path, class: 'btn btn-primary' %></p>
@@ -12,11 +15,17 @@
 
 <% @groups.each do |group| %>
   <tr>
-    <td><%= link_to group.name, group_path(group) %></td>
-    <td><%= link_to 'Editar', edit_group_path(group) %></td>
-    <td><%= link_to 'Eliminar', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to group.name, group_path(group) %></td>
+      <td><%= link_to 'Editar', edit_group_path(group) %></td>
+      <td><%= link_to 'Eliminar', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
   </tr>
 <% end %>
 </table>
+
+<% end %>
+
+
+
 
 
