--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Kudyn</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "application", "jquery-1.8.2.min.js", "highcharts" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -41,5 +41,31 @@
       <%= yield %>
     </div>
   </div>
+  <script type="text/javascript">
+    $(function(){
+      new Highcharts.Chart({
+        chart:{
+          renderTo: "graficas"
+        },
+        title: {
+          text: "Calificaciones"
+        },
+        xAxis: {
+          type: "datetime"
+        },
+        yAxis: {
+          title:{
+            text: "Meses"
+          }
+        },
+        series: [{
+          data: [90, 100, 70, 80, 95]
+        }]
+      })
+    }
+      )
+  </script>
+<div id="graficas" style="width:560px; height:300px;">
+</div>
 </body>
 </html>
