--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,9 +64,62 @@
         }]
       })
     }
-      )
+      );
+      $(function () {
+    var chart;
+    $(document).ready(function() {
+        chart = new Highcharts.Chart({
+            chart: {
+                renderTo: 'faltas',
+                plotBackgroundColor: null,
+                plotBorderWidth: null,
+                plotShadow: false
+            },
+            title: {
+                text: 'Faltas de todos los grupos de un determinado maestro'
+            },
+            tooltip: {
+        	    pointFormat: '{series.name}: <b>{point.percentage}%</b>',
+            	percentageDecimals: 1
+            },
+            plotOptions: {
+                pie: {
+                    allowPointSelect: true,
+                    cursor: 'pointer',
+                    dataLabels: {
+                        enabled: true,
+                        color: '#000000',
+                        connectorColor: '#000000',
+                        formatter: function() {
+                            return '<b>'+ this.point.name +'</b>: '+ this.percentage +' %';
+                        }
+                    }
+                }
+            },
+            series: [{
+                type: 'pie',
+                name: 'Browser share',
+                data: [
+                    ['Historia',   45.0],
+                    ['Etica',       26.8],
+                    {
+                        name: 'Matematicas',
+                        y: 12.8,
+                        sliced: true,
+                        selected: true
+                    },
+                    ['Español',    8.5],
+                    ['Arte',     6.2],
+                    ['Gym',   0.7]
+                ]
+            }]
+        });
+    });
+    
+});
   </script>
 <center><div id="graficas" style="width:560px; height:300px;"></center>
+<center><div id="faltas" style="width:560px; height:300px;"></center>
 </div>
 </body>
 </html>
