Traducción de formas de devise a español

--- a/app/views/groups/_students.html.erb
+++ b/app/views/groups/_students.html.erb
@@ -18,8 +18,9 @@
             <td><%= ff.check_box :student_id, :label => ff.object.student.name %></td>
           </tr>
         <% end %>
-<%= f.submit 'Enviar', class: 'btn' %>
-
-<% end %>
 
 </table>
+        
+<%= f.submit 'Enviar', class: 'btn btn-primary' %>
+
+<% end %>
